--- a/src/index.css
+++ b/src/index.css
@@ -1974,3 +1974,22 @@ img { max-width: 100%; }
 .transition-border {
   transition: border-color .25s ease-in-out;
 }
+
+.FileContainer {
+    overflow: hidden;
+    position: relative;
+}
+
+.FileContainer [type=file] {
+    cursor: inherit;
+    display: block;
+    font-size: 999px;
+    filter: alpha(opacity=0);
+    min-height: 100%;
+    min-width: 100%;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    text-align: right;
+    top: 0;
+}
